--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "@ionic/angular": "^4.7.1",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "bootstrap": "4.1.1",
     "cordova-android": "8.1.0",
     "cordova-plugin-appavailability": "^0.4.2",
     "cordova-plugin-inappbrowser": "^3.1.0",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "ngx-bootstrap": "^5.1.2",
     "rxjs": "^6.5.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
