--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "jsonwebtoken": "^8.5.1",
     "ngx-bootstrap": "^5.1.2",
     "rxjs": "^6.5.3",
     "tslib": "^1.9.0",
@@ -59,6 +60,7 @@
     "@ionic/angular-toolkit": "~2.0.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jsonwebtoken": "^8.3.5",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "cordova-plugin-device": "^2.0.2",
