--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-regular-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@ionic-native/camera": "^5.15.1",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/crop": "^5.15.1",
     "@ionic-native/in-app-browser": "^5.15.0",
+    "@ionic-native/ionic-webview": "^5.15.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
@@ -38,6 +41,8 @@
     "bootstrap": "4.1.1",
     "cordova-android": "8.1.0",
     "cordova-plugin-appavailability": "^0.4.2",
+    "cordova-plugin-camera": "^4.1.0",
+    "cordova-plugin-crop": "^0.4.0",
     "cordova-plugin-inappbrowser": "^3.1.0",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
@@ -88,12 +93,12 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {
-        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-      },
+      "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-inappbrowser": {},
-      "cordova-plugin-appavailability": {}
+      "cordova-plugin-appavailability": {},
+      "cordova-plugin-camera": {},
+      "cordova-plugin-crop": {}
     },
     "platforms": [
       "android"
