--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@ionic-native/in-app-browser": "^5.15.0",
     "@ionic-native/ionic-webview": "^5.15.1",
     "@ionic-native/location-accuracy": "^5.15.1",
+    "@ionic-native/open-native-settings": "^5.15.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
@@ -42,6 +43,7 @@
     "@ngx-translate/http-loader": "^4.0.0",
     "bootstrap": "4.1.1",
     "cordova-android": "8.1.0",
+    "cordova-open-native-settings": "^1.5.2",
     "cordova-plugin-appavailability": "^0.4.2",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-crop": "^0.4.0",
@@ -106,7 +108,8 @@
       "cordova-plugin-geolocation": {},
       "cordova-plugin-request-location-accuracy": {
         "PLAY_SERVICES_LOCATION_VERSION": "16.+"
-      }
+      },
+      "cordova-open-native-settings": {}
     },
     "platforms": [
       "android"
