--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@ionic/angular": "^4.7.1",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "angular-hammer": "^2.2.0",
     "bootstrap": "4.1.1",
     "cordova-android": "8.1.0",
     "cordova-open-native-settings": "^1.5.2",
@@ -53,6 +54,7 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "ionic-swipe-all": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "ngx-bootstrap": "^5.1.2",
     "rxjs": "^6.5.3",
