--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "hammerjs": "^2.0.8",
     "ionic-swipe-all": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "ngx-bootstrap": "^5.1.2",
     "rxjs": "^6.5.3",
     "tslib": "^1.9.0",
