--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@ionic-native/camera": "^5.15.1",
+    "@ionic-native/contacts": "^5.16.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/crop": "^5.15.1",
     "@ionic-native/geolocation": "^5.15.1",
@@ -47,6 +48,7 @@
     "cordova-open-native-settings": "^1.5.2",
     "cordova-plugin-appavailability": "^0.4.2",
     "cordova-plugin-camera": "^4.1.0",
+    "cordova-plugin-contacts": "^3.0.1",
     "cordova-plugin-crop": "^0.4.0",
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-inappbrowser": "^3.1.0",
@@ -112,7 +114,8 @@
       "cordova-plugin-request-location-accuracy": {
         "PLAY_SERVICES_LOCATION_VERSION": "16.+"
       },
-      "cordova-open-native-settings": {}
+      "cordova-open-native-settings": {},
+      "cordova-plugin-contacts": {}
     },
     "platforms": [
       "android"
