--- a/package.json
+++ b/package.json
@@ -28,14 +28,16 @@
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-regular-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@ionic-native/android-permissions": "^5.16.0",
     "@ionic-native/camera": "^5.15.1",
     "@ionic-native/contacts": "^5.16.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/crop": "^5.15.1",
+    "@ionic-native/diagnostic": "^5.16.0",
     "@ionic-native/geolocation": "^5.15.1",
     "@ionic-native/in-app-browser": "^5.15.0",
     "@ionic-native/ionic-webview": "^5.15.1",
-    "@ionic-native/location-accuracy": "^5.15.1",
+    "@ionic-native/location-accuracy": "^5.16.0",
     "@ionic-native/open-native-settings": "^5.15.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -46,6 +48,7 @@
     "bootstrap": "^4.3.1",
     "cordova-android": "8.1.0",
     "cordova-open-native-settings": "^1.5.2",
+    "cordova-plugin-android-permissions": "^1.0.2",
     "cordova-plugin-appavailability": "^0.4.2",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-contacts": "^3.0.1",
@@ -53,6 +56,7 @@
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-inappbrowser": "^3.1.0",
     "cordova-plugin-request-location-accuracy": "^2.3.0",
+    "cordova.plugins.diagnostic": "^5.0.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
@@ -111,11 +115,13 @@
       "cordova-plugin-camera": {},
       "cordova-plugin-crop": {},
       "cordova-plugin-geolocation": {},
-      "cordova-plugin-request-location-accuracy": {
-        "PLAY_SERVICES_LOCATION_VERSION": "16.+"
-      },
+      "cordova-plugin-request-location-accuracy": {},
       "cordova-open-native-settings": {},
-      "cordova-plugin-contacts": {}
+      "cordova-plugin-contacts": {},
+      "cordova-plugin-android-permissions": {},
+      "cordova.plugins.diagnostic": {
+        "ANDROID_SUPPORT_VERSION": "28.+"
+      }
     },
     "platforms": [
       "android"
