--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "@ionic/angular": "^4.7.1",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
-    "@types/socket.io": "^2.1.4",
     "angular-hammer": "^2.2.0",
     "bootstrap": "^4.3.1",
     "cordova-android": "8.1.0",
@@ -59,16 +58,14 @@
     "cordova-plugin-request-location-accuracy": "^2.3.0",
     "cordova.plugins.diagnostic": "^5.0.1",
     "core-js": "^2.5.4",
-    "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ionic-swipe-all": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "ngx-bootstrap": "^5.1.2",
-    "ngx-socket-io": "^3.0.1",
     "rxjs": "^6.5.3",
-    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
