--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.1.3",
-    "@angular/cdk": "~8.2.1",
+    "@angular/animations": "^8.2.14",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.1.2",
     "@angular/compiler": "~8.1.2",
     "@angular/core": "~8.1.2",
     "@angular/forms": "~8.1.2",
-    "@angular/material": "^8.2.1",
+    "@angular/http": "^7.2.15",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
@@ -64,6 +65,12 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "ngx-bootstrap": "^5.1.2",
+    "ngx-popper": "^7.0.0",
+    "ngx-tour-core": "^4.1.0",
+    "ngx-tour-md-menu": "^4.1.0",
+    "ngx-tour-ng-bootstrap": "^4.1.0",
+    "ngx-tour-ngx-popper": "^4.1.0",
+    "popper.js": "^1.16.0",
     "rxjs": "^6.5.3",
     "socket.io-client": "^2.3.0",
     "tslib": "^1.9.0",
