--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
     "@ionic-native/crop": "^5.15.1",
     "@ionic-native/diagnostic": "^5.16.0",
     "@ionic-native/geolocation": "^5.15.1",
+    "@ionic-native/globalization": "^5.17.1",
     "@ionic-native/in-app-browser": "^5.15.0",
     "@ionic-native/ionic-webview": "^5.15.1",
     "@ionic-native/location-accuracy": "^5.16.0",
     "@ionic-native/open-native-settings": "^5.15.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
+    "@ionic-native/vibration": "^5.17.1",
     "@ionic/angular": "^4.7.1",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
@@ -55,8 +57,10 @@
     "cordova-plugin-contacts": "^3.0.1",
     "cordova-plugin-crop": "^0.4.0",
     "cordova-plugin-geolocation": "^4.0.2",
+    "cordova-plugin-globalization": "^1.11.0",
     "cordova-plugin-inappbrowser": "^3.1.0",
     "cordova-plugin-request-location-accuracy": "^2.3.0",
+    "cordova-plugin-vibration": "^3.1.1",
     "cordova.plugins.diagnostic": "^5.0.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
@@ -129,7 +133,9 @@
       "cordova-plugin-android-permissions": {},
       "cordova.plugins.diagnostic": {
         "ANDROID_SUPPORT_VERSION": "28.+"
-      }
+      },
+      "cordova-plugin-globalization": {},
+      "cordova-plugin-vibration": {}
     },
     "platforms": [
       "android"
