--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@ionic-native/ionic-webview": "^5.15.1",
     "@ionic-native/location-accuracy": "^5.16.0",
     "@ionic-native/open-native-settings": "^5.15.1",
+    "@ionic-native/screen-orientation": "^5.18.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic-native/vibration": "^5.17.1",
@@ -60,9 +61,11 @@
     "cordova-plugin-globalization": "^1.11.0",
     "cordova-plugin-inappbrowser": "^3.1.0",
     "cordova-plugin-request-location-accuracy": "^2.3.0",
+    "cordova-plugin-screen-orientation": "^3.0.2",
     "cordova-plugin-vibration": "^3.1.1",
     "cordova.plugins.diagnostic": "^5.0.1",
     "core-js": "^2.5.4",
+    "es6-promise-plugin": "^4.2.2",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ionic-swipe-all": "^2.0.0",
@@ -141,7 +144,8 @@
         "ANDROID_SUPPORT_VERSION": "28.+"
       },
       "cordova-plugin-globalization": {},
-      "cordova-plugin-vibration": {}
+      "cordova-plugin-vibration": {},
+      "cordova-plugin-screen-orientation": {}
     },
     "platforms": [
       "android"
