--- a/package.json
+++ b/package.json
@@ -53,15 +53,19 @@
     "angular-hammer": "^2.2.0",
     "bootstrap": "^4.3.1",
     "cordova-android": "8.1.0",
+    "cordova-ios": "5.1.1",
     "cordova-open-native-settings": "^1.5.2",
     "cordova-plugin-android-permissions": "^1.0.2",
     "cordova-plugin-appavailability": "^0.4.2",
+    "cordova-plugin-background-mode": "^0.7.3",
+    "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-contacts": "^3.0.1",
     "cordova-plugin-crop": "^0.4.0",
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-globalization": "^1.11.0",
     "cordova-plugin-inappbrowser": "^3.1.0",
+    "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "cordova-plugin-request-location-accuracy": "^2.3.0",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "cordova-plugin-vibration": "^3.1.1",
@@ -152,7 +156,8 @@
       "cordova-plugin-local-notification": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
