--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@ionic/angular": "^4.7.1",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "@types/hammerjs": "^2.0.36",
     "angular-hammer": "^2.2.0",
     "bootstrap": "^4.3.1",
     "cordova-android": "8.1.0",
@@ -75,6 +76,7 @@
     "es6-promise-plugin": "^4.2.2",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "ionic-long-press": "^2.0.2",
     "ionic-swipe-all": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
@@ -92,7 +94,7 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.801.2",
-    "@angular-devkit/build-angular": "~0.801.2",
+    "@angular-devkit/build-angular": "^0.803.22",
     "@angular-devkit/core": "~8.1.2",
     "@angular-devkit/schematics": "~8.1.2",
     "@angular/cli": "~8.1.2",
