--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@ionic-native/keyboard": "^5.19.1",
     "@ionic-native/local-notifications": "^5.18.0",
     "@ionic-native/location-accuracy": "^5.16.0",
+    "@ionic-native/network": "^5.19.1",
     "@ionic-native/open-native-settings": "^5.15.1",
     "@ionic-native/screen-orientation": "^5.18.0",
     "@ionic-native/splash-screen": "^5.0.0",
@@ -68,6 +69,7 @@
     "cordova-plugin-globalization": "^1.11.0",
     "cordova-plugin-inappbrowser": "^3.1.0",
     "cordova-plugin-local-notification": "^0.9.0-beta.2",
+    "cordova-plugin-network-information": "^2.0.2",
     "cordova-plugin-request-location-accuracy": "^2.3.0",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "cordova-plugin-vibration": "^3.1.1",
@@ -155,7 +157,8 @@
       "cordova-plugin-screen-orientation": {},
       "cordova-plugin-background-mode": {},
       "cordova-plugin-local-notification": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-network-information": {}
     },
     "platforms": [
       "android",
