--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-globalization": "^1.11.0",
     "cordova-plugin-inappbrowser": "^3.1.0",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "cordova-plugin-network-information": "^2.0.2",
     "cordova-plugin-request-location-accuracy": "^2.3.0",
@@ -75,6 +76,7 @@
     "cordova-plugin-vibration": "^3.1.1",
     "cordova.plugins.diagnostic": "^5.0.1",
     "core-js": "^2.5.4",
+    "core-util-is": "^1.0.2",
     "es6-promise-plugin": "^4.2.2",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
