--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
     "@types/hammerjs": "^2.0.36",
     "angular-hammer": "^2.2.0",
     "bootstrap": "^4.3.1",
-    "cordova-android": "8.1.0",
     "cordova-ios": "5.1.1",
     "cordova-open-native-settings": "^1.5.2",
     "cordova-plugin-android-permissions": "^1.0.2",
@@ -95,7 +94,7 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.801.2",
-    "@angular-devkit/build-angular": "^0.803.24",
+    "@angular-devkit/build-angular": "^0.803.23",
     "@angular-devkit/core": "~8.1.2",
     "@angular-devkit/schematics": "~8.1.2",
     "@angular/cli": "~8.1.2",
@@ -103,12 +102,12 @@
     "@angular/compiler-cli": "~8.1.2",
     "@angular/language-service": "~8.1.2",
     "@ionic/angular-toolkit": "~2.0.0",
-    "@ionic/app-scripts": "^3.2.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/jsonwebtoken": "^8.3.5",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
+    "cordova-android": "^8.0.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-webview": "^4.1.2",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -147,9 +146,7 @@
       "cordova-open-native-settings": {},
       "cordova-plugin-contacts": {},
       "cordova-plugin-android-permissions": {},
-      "cordova.plugins.diagnostic": {
-        "ANDROID_SUPPORT_VERSION": "28.+"
-      },
+      "cordova.plugins.diagnostic": {},
       "cordova-plugin-globalization": {},
       "cordova-plugin-vibration": {},
       "cordova-plugin-screen-orientation": {},
@@ -159,8 +156,8 @@
       "cordova-plugin-network-information": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
