--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@ionic-native/diagnostic": "^5.16.0",
     "@ionic-native/geolocation": "^5.15.1",
     "@ionic-native/globalization": "^5.17.1",
+    "@ionic-native/google-plus": "^5.28.0",
     "@ionic-native/in-app-browser": "^5.15.0",
     "@ionic-native/ionic-webview": "^5.15.1",
     "@ionic-native/keyboard": "^5.19.1",
@@ -109,6 +110,7 @@
     "codelyzer": "^5.0.0",
     "cordova-android": "^8.0.0",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-googleplus": "^8.5.1",
     "cordova-plugin-ionic-webview": "^4.1.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
@@ -153,7 +155,10 @@
       "cordova-plugin-background-mode": {},
       "cordova-plugin-local-notification": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-network-information": {}
+      "cordova-plugin-network-information": {},
+      "cordova-plugin-googleplus": {
+        "PLAY_SERVICES_VERSION": "15.0.1"
+      }
     },
     "platforms": [
       "ios",
