--- a/package.json
+++ b/package.json
@@ -157,7 +157,7 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-network-information": {},
       "cordova-plugin-googleplus": {
-        "REVERSED_CLIENT_ID": "com.virtwoo.wink",
+        "REVERSED_CLIENT_ID": "604204991836-n0pqda9hi5k320oscqnerblqqb17u0s9.apps.googleusercontent.com",
         "WEB_APPLICATION_CLIENT_ID": "604204991836-n0pqda9hi5k320oscqnerblqqb17u0s9.apps.googleusercontent.com"
       }
     },
