--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@ionic-native/diagnostic": "^5.28.0",
     "@ionic-native/geolocation": "^5.28.0",
     "@ionic-native/globalization": "^5.28.0",
+    "@ionic-native/google-plus": "^5.28.0",
     "@ionic-native/keyboard": "^5.28.0",
     "@ionic-native/local-notifications": "^5.28.0",
     "@ionic-native/location-accuracy": "^5.28.0",
@@ -74,13 +75,17 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "cordova-android": "^8.0.0",
     "cordova-plugin-android-permissions": "^1.1.0",
+    "cordova-plugin-androidx": "^3.0.0",
+    "cordova-plugin-androidx-adapter": "^1.1.1",
     "cordova-plugin-background-mode": "^0.7.3",
     "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-contacts": "^3.0.1",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-globalization": "^1.11.0",
+    "cordova-plugin-googleplus": "git+https://github.com/EddyVerbruggen/cordova-plugin-googleplus.git",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.2.1",
     "cordova-plugin-local-notification": "^0.9.0-beta.2",
@@ -92,6 +97,7 @@
     "cordova-plugin-vibration": "^3.1.1",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova.plugins.diagnostic": "^6.0.2",
+    "es6-promise-plugin": "^4.2.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
@@ -107,11 +113,17 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-request-location-accuracy": {},
+      "cordova-plugin-request-location-accuracy": {
+        "PLAY_SERVICES_LOCATION_VERSION": "16.+"
+      },
       "cordova-plugin-geolocation": {},
-      "cordova-plugin-camera": {},
+      "cordova-plugin-camera": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
       "cordova-plugin-android-permissions": {},
-      "cordova.plugins.diagnostic": {},
+      "cordova.plugins.diagnostic": {
+        "ANDROIDX_VERSION": "1.+"
+      },
       "cordova-plugin-contacts": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-local-notification": {},
@@ -124,10 +136,19 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {}
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
+      "cordova-plugin-googleplus": {
+        "REVERSED_CLIENT_ID": "604204991836-hnipnqfv91srhfk6fg09dijt1idt0g75.apps.googleusercontent.com",
+        "WEB_APPLICATION_CLIENT_ID": "604204991836-erv6no982pa879cvsd6cce8hg9n3c0c9.apps.googleusercontent.com"
+      },
+      "cordova-plugin-androidx": {},
+      "cordova-plugin-androidx-adapter": {}
     },
     "platforms": [
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
