--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@ionic/angular": "^5.0.0",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "cordova-android": "8.0.0",
     "cordova-ios": "6.1.1",
     "cordova-plugin-camera": "^5.0.0",
     "hammerjs": "^2.0.8",
@@ -75,7 +76,6 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
-    "cordova-android": "^8.0.0",
     "cordova-plugin-android-permissions": "^1.1.0",
     "cordova-plugin-androidx": "^3.0.0",
     "cordova-plugin-androidx-adapter": "^1.1.1",
@@ -140,7 +140,7 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-googleplus": {
-        "REVERSED_CLIENT_ID": "604204991836-hnipnqfv91srhfk6fg09dijt1idt0g75.apps.googleusercontent.com",
+        "REVERSED_CLIENT_ID": "com.googleusercontent.apps.604204991836-hnipnqfv91srhfk6fg09dijt1idt0g75",
         "WEB_APPLICATION_CLIENT_ID": "604204991836-erv6no982pa879cvsd6cce8hg9n3c0c9.apps.googleusercontent.com"
       },
       "cordova-plugin-androidx": {},
