--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ionic-native/contacts": "^5.28.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/diagnostic": "^5.28.0",
+    "@ionic-native/file": "^5.28.0",
     "@ionic-native/geolocation": "^5.28.0",
     "@ionic-native/globalization": "^5.28.0",
     "@ionic-native/google-plus": "^5.28.0",
@@ -50,7 +51,6 @@
     "@ngx-translate/http-loader": "^6.0.0",
     "cordova-android": "8.0.0",
     "cordova-ios": "6.1.1",
-    "cordova-plugin-camera": "^5.0.0",
     "hammerjs": "^2.0.8",
     "ionic-long-press": "^2.0.3",
     "moment": "^2.29.0",
@@ -83,6 +83,7 @@
     "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-contacts": "^3.0.1",
     "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-globalization": "^1.11.0",
     "cordova-plugin-googleplus": "git+https://github.com/EddyVerbruggen/cordova-plugin-googleplus.git",
@@ -117,9 +118,6 @@
         "PLAY_SERVICES_LOCATION_VERSION": "16.+"
       },
       "cordova-plugin-geolocation": {},
-      "cordova-plugin-camera": {
-        "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      },
       "cordova-plugin-android-permissions": {},
       "cordova.plugins.diagnostic": {
         "ANDROIDX_VERSION": "1.+"
@@ -141,14 +139,16 @@
       },
       "cordova-plugin-googleplus": {
         "REVERSED_CLIENT_ID": "com.googleusercontent.apps.604204991836-hnipnqfv91srhfk6fg09dijt1idt0g75",
-        "WEB_APPLICATION_CLIENT_ID": "604204991836-erv6no982pa879cvsd6cce8hg9n3c0c9.apps.googleusercontent.com"
+        "WEB_APPLICATION_CLIENT_ID": "604204991836-erv6no982pa879cvsd6cce8hg9n3c0c9.apps.googleusercontent.com",
+        "PLAY_SERVICES_VERSION": "15.0.1"
       },
       "cordova-plugin-androidx": {},
-      "cordova-plugin-androidx-adapter": {}
+      "cordova-plugin-androidx-adapter": {},
+      "cordova-plugin-camera": {},
+      "cordova-plugin-file": {}
     },
     "platforms": [
-      "ios",
-      "android"
+      "ios"
     ]
   }
 }
