--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "@ionic-native/contacts": "^5.28.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/diagnostic": "^5.28.0",
-    "@ionic-native/file": "^5.28.0",
     "@ionic-native/geolocation": "^5.28.0",
     "@ionic-native/globalization": "^5.28.0",
     "@ionic-native/google-plus": "^5.28.0",
@@ -49,7 +48,6 @@
     "@ionic/angular": "^5.0.0",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
-    "cordova-android": "8.0.0",
     "cordova-ios": "6.1.1",
     "hammerjs": "^2.0.8",
     "ionic-long-press": "^2.0.3",
@@ -76,6 +74,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "cordova-android": "^9.0.0",
     "cordova-plugin-android-permissions": "^1.1.0",
     "cordova-plugin-androidx": "^3.0.0",
     "cordova-plugin-androidx-adapter": "^1.1.1",
@@ -83,7 +82,6 @@
     "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-contacts": "^3.0.1",
     "cordova-plugin-device": "^2.0.3",
-    "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-globalization": "^1.11.0",
     "cordova-plugin-googleplus": "git+https://github.com/EddyVerbruggen/cordova-plugin-googleplus.git",
@@ -144,8 +142,7 @@
       },
       "cordova-plugin-androidx": {},
       "cordova-plugin-androidx-adapter": {},
-      "cordova-plugin-camera": {},
-      "cordova-plugin-file": {}
+      "cordova-plugin-camera": {}
     },
     "platforms": [
       "ios",
