--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "cordova-ios": "6.1.1",
     "hammerjs": "^2.0.8",
     "ionic-long-press": "^2.0.3",
+    "material-icons": "^0.3.1",
     "moment": "^2.29.0",
     "ngx-bootstrap": "^6.1.0",
     "ngx-popper": "^7.0.0",
